smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/strings/unclosed-string.smithy
// Parse error at line 6, column 1 near `[EOF]`: Expected: '"', but found '[EOF]'
namespace smithy.example

@documentation(")
string MyString
